theatre-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: theatre-service
  name: theatre-service
spec:
  type: LoadBalancer                # Add this line to specify the service type as LoadBalancer
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    io.kompose.service: theatre-service
status:
  loadBalancer: {}
